date added bg modified

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 	
 	<header>
 		<h1>Task List 2022</h1>
+
+       <div class="curr_date">
+        <p>Date: <span id="datetime"></span></p>
+       </div>
+
 		<form id="new-task-form">
 			<input 
 				type="text" 
